<resources>
    <string name="app_name">Piano Valentin</string>
    <string name="action_settings">Settings</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="G">G</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="title_activity_log">Log</string>

</resources>
