<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5">

        <Button
            android:id="@+id/bt_c"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.14"
            android:text="@string/C" />

        <Button
            android:id="@+id/bt_d"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.14"
            android:text="@string/D" />

        <Button
            android:id="@+id/bt_e"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.14"
            android:text="@string/E" />

        <Button
            android:id="@+id/bt_f"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.14"
            android:text="@string/F" />

        <Button
            android:id="@+id/bt_g"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.14"
            android:text="@string/G" />

        <Button
            android:id="@+id/bt_a"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.14"
            android:text="@string/A" />

        <Button
            android:id="@+id/bt_b"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.14"
            android:text="@string/B" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5">

        <TextView
            android:id="@+id/tv_log"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>
</LinearLayout>
